# SugarCLI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
lib/: cli_envinronment.h  component.h  configurable_component_t.cpp  configurable_component_t.h  configuration_item.h  configuration_option.h  detect_container.h  detect_containter.h  interactive_item.h  item.cpp  item.h  parser.cpp  parser.h  positional_argument_description.cpp  positional_argument_description.h  requirement.cpp  requirement.h  runner.h  typedefs.h
lib/exception/: cli_argument_not_found.h  module_not_found.h  user_exception.hpp
lib/impl/: parser_impl.cpp  parser_impl.h
lib/internal/: default_parsing_strategy.h  handling_procedure.h  interactive_handling_procedure.h  internal_parser.cpp  internal_parser.h  internal_vector_iterator.cpp  internal_vector_iterator.h  parsing_strategy.h  string_convertor.h  type_definitions.h
tests/: array_comp_test.cpp  comp_test.cpp  complex_comp_test.cpp  complex_nested_comp_test.cpp  component_api_test.cpp  error_handling_test.cpp  interactive_array_comp_test.cpp  interactive_comp_test.cpp  item_api_mocks.h  item_api_test.cpp  item_parsing_test.cpp  nested_comp_test.cpp  positional_comp_test.cpp  variable_map_creation.cpp  vector_state.cpp
tests/classes/: complex_component.h  complex_nested_component.h  component_with_arrays.h  interactive_component.h  simple_component.h  simple_nested_component.h  simple_positional_component.h
tests/util/: strutil.cpp  strutil.hpp
